--- a/Kursova/View/UserInterface/Pages/ProductPage.xaml
+++ b/Kursova/View/UserInterface/Pages/ProductPage.xaml
@@ -29,11 +29,11 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <userControls:NewTextBlock x:Name="ProductNamebox" Width="350" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"
+                <userControls:NewTextBlock x:Name="ProductNamebox" MinWidth="350" MinHeight="25" MaxHeight="50" MaxWidth="800" Margin="5, 10"
                Placeholder="Назва продукту"/>
-                <userControls:NewTextBlock x:Name="Pricebox" Width="350" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"
+                <userControls:NewTextBlock x:Name="Pricebox" MinWidth="350" MinHeight="25" MaxHeight="50" MaxWidth="800" Margin="5, 10"
               Grid.Row="1" Placeholder="Ціна продукту"/>
-                <userControls:NewTextBlock x:Name="Volumebox" Width="350" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"
+                <userControls:NewTextBlock x:Name="Volumebox" MinWidth="350" MinHeight="25" MaxHeight="50" MaxWidth="800" Margin="5, 10"
               Grid.Row="2" Placeholder="Кількість продукту"/>
                 <!-- <userControls:NewTextBlock x:Name="StepsBox" Width="350" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"
               Grid.Row="3" Placeholder="Зроблено кроків"/>
@@ -66,8 +66,8 @@
         <Grid Grid.Row="1">
             <Button x:Name="SaveDataButton" Width="100" Height="30" HorizontalAlignment="Center" 
         VerticalAlignment="Center" Content="Зберегти" Background="Transparent" FontSize="18"
-        FontWeight="Bold" BorderBrush="Black" BorderThickness="0.1" Click="SaveDataButton_Click" Foreground="Black"/>
-            <Border BorderBrush="Black" BorderThickness="1"/>
+        FontWeight="Bold" BorderBrush="White" BorderThickness="0.1" Click="SaveDataButton_Click" Foreground="LightGray"/>
+            <Border BorderBrush="White" BorderThickness="1"/>
         </Grid>
     </Grid>
 
