--- a/Kursova/View/UserInterface/Pages/RegistrationPage.xaml
+++ b/Kursova/View/UserInterface/Pages/RegistrationPage.xaml
@@ -6,21 +6,29 @@
       xmlns:local="clr-namespace:Kursova.View.UserInterface.Pages"
       xmlns:userControls="clr-namespace:Kursova.View.UserControls"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="400"
+      d:DesignHeight="450" d:DesignWidth="800"
       Background="Transparent">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="60*"/>
+            <ColumnDefinition Width="40*"/>
         </Grid.ColumnDefinitions>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50*" MaxHeight="200" MinHeight="100" />
-                <RowDefinition Height="20*" MaxHeight="100" MinHeight="50" />
-                <RowDefinition Height="30*" MaxHeight="200" MinHeight="100" />
-            </Grid.RowDefinitions>
-            <!--<Image Grid.Row="0" HorizontalAlignment="Center" Margin="0,10,0,10" VerticalAlignment="Top"
-           Height="auto" Width="auto" Source="/img/user.png"/>-->
+        <Grid Grid.Column="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45*" MinHeight="50" MaxHeight="100" />
+            <RowDefinition Height="20*" MinHeight="100" />
+            <RowDefinition Height="35*" MinHeight="50" />
+        </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <TextBlock x:Name="MyTitle" Text="РЕЄСТРАЦІЯ" Foreground="LightGray"
+               MinHeight="20" MinWidth="100"
+               MaxHeight="100" MaxWidth="450"
+               Background="Transparent" TextAlignment="Center"
+               FontWeight="ExtraBlack"
+               Margin="0,10,0,0" SizeChanged="Window_SizeChanged"/>
+            </Grid>
 
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
@@ -28,22 +36,34 @@
                     <RowDefinition Height="33*"/>
                     <RowDefinition Height="33*"/>
                 </Grid.RowDefinitions>
-                <userControls:NewTextBlock x:Name="regText" Placeholder="Логін" Grid.Row="0" Width="150" Height="20"/>
-                <userControls:NewPasswordBlock x:Name="regPass" PlaceholderPass="Пароль" Grid.Row="1" Width="150" Height="20"/>
-                <userControls:NewPasswordBlock x:Name="regPassReplie" PlaceholderPass="Повторіть пароль" Grid.Row="2" Width="150" Height="20"/>
+                <userControls:NewTextBlock x:Name="regText" Placeholder="Логін" Grid.Row="0" Margin="5"
+                                           MinWidth="100" MaxWidth="700"
+                                           MinHeight="15" MaxHeight="40"/>
+                <userControls:NewPasswordBlock x:Name="regPass" PlaceholderPass="Пароль" Grid.Row="1"  Margin="5"
+                                               MinWidth="100" MaxWidth="700"
+                                               MinHeight="15" MaxHeight="40"/>
+                <userControls:NewPasswordBlock x:Name="regPassReplie" PlaceholderPass="Повторіть пароль" Grid.Row="2"  Margin="5"
+                                               MinWidth="100" MaxWidth="700"
+                                               MinHeight="15" MaxHeight="40"/>
 
             </Grid>
             <Grid Grid.Row="2" Margin="0,25,0,0">
-                <Button Width="auto" Height="auto" HorizontalAlignment="Center" 
-                VerticalAlignment="Top" Padding="20,0" Content="Зареєструватися"
-                Click="Button_Registr_Click" Background="Transparent" 
-                    BorderBrush="Transparent" Foreground="Black" FontWeight="Bold"/>
-                <Button Width="auto" Height="auto" HorizontalAlignment="Center" 
-                VerticalAlignment="Top" Padding="10,0" Margin="0,30,0,0" Content="Вхід"
-                Background="Transparent" BorderBrush="Transparent"
-                Click="Button_Authorization_Click" Foreground="Black" FontWeight="Bold"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50*"/>
+                    <ColumnDefinition Width="50*"/>
+                </Grid.ColumnDefinitions>
+                <Button MinHeight="20" MaxHeight="50" MinWidth="80" MaxWidth="400" Margin="20,0" Content="Зареєструватися"
+        Click="Button_Registr_Click" Background="Transparent" Foreground="LightGray"
+        BorderThickness="1" BorderBrush="Gray" FontWeight="ExtraBlack" Grid.Column="0">
+                </Button>
+                <Button  MinHeight="20" MaxHeight="50" MinWidth="80" MaxWidth="400" Margin="20,0" Content="Вхід"
+        Background="Transparent" BorderThickness="1" BorderBrush="Gray" Grid.Column="1"
+        Click="Button_Authorization_Click"  Foreground="LightGray" FontWeight="ExtraBlack"/>
 
             </Grid>
         </Grid>
+        <Image Grid.Column="1" Source="/img/user.png" Margin="10"
+        MinHeight="200" MinWidth="200"
+        MaxHeight="400" MaxWidth="400"/>
     </Grid>
 </Page>
